// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense Summary with no expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       expense(s) totalling 
      <span>
        $0.00
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       hidden expense due to filters
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render Expense Summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       expense(s) totalling 
      <span>
        $10.00
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       hidden expense due to filters
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render Expense Summary with three expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       expense(s) totalling 
      <span>
        $114.56
      </span>
    </h1>
    <h3
      className="page-header__subtitle"
    >
      <span />
       hidden expense due to filters
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
